# wisp

./: .dockerignore  .envrc  .gitignore  AGENTS.md  README.md  TODO.md  biome.json  docker-compose.yml  flake.nix  install.sh  package.json  turbo.json
.github/workflows/: docker.yml  docs.yaml
client/: index.html  package.json  pwa-assets.config.ts  tsconfig.json  vite.config.ts
client/src/: index.css  main.tsx  routeTree.gen.ts
client/src/clients/: apps.client.ts  catalog.client.ts  invites.client.ts  participants.client.ts  registry.client.ts  sessions.client.ts
client/src/collections/: app-shortcuts.collection.ts  apps.collection.ts  catalog-sources.collection.ts  index.ts  session-participants.collection.ts  (+2 more)
docker/: Dockerfile  entrypoint.sh
docker/caddy/: Caddyfile
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/contributing/: development.md  http-surface.md  launch-flow.md  project-layout.md
docs/guide/: architecture.md  configuration.md  first-use.md  installation.md  introduction.md  troubleshooting.md  updating.md
server/: .air.toml  go.mod  go.sum  main.go  package.json
server/migrations/: 1700000000_extend_users.go  1700000001_create_apps.go  1700000002_create_sessions.go  1700000003_create_session_participants.go  1700000004_create_catalog_sources.go  1700000005_create_app_shortcuts.go
server/spa/: index.html
tauri/: .gitignore  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
(+167 files in other folders)
