[package]
name = "wisp"
version = "0.5.0"
description = "Wisp desktop/mobile shell"
authors = ["Kevin Bonnoron"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "wisp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
